--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,34 @@
   pointer-events: none;
 }
 
+.footer {
+  background-color: var(--second-color);
+  color: #fff;
+  text-align: center;
+  font-weight: var(--font-semi);
+  padding: 2rem 0;
+}
+
+.footer__title {
+  font-size: 2rem;
+  margin-bottom: var(--mb-4);
+}
+
+.footer__social {
+  margin-bottom: var(--mb-4);
+}
+
+.footer__icon {
+  font-size: 1.5rem;
+  color: #fff;
+  margin: 1 var(--mb-2);
+  padding: 2rem;
+}
+
+.footer__copy {
+  font-size: var(--smaller-font-size);
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -24,8 +52,8 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.firstline{
+  color: aqua;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +64,8 @@
     transform: rotate(360deg);
   }
 }
+
+.blank{
+  color: rgb(52, 33, 224);
+}
+
